# Image-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
app/: app.py
app/templates/: display_images.html  layout.html  upload.html
resources/: color_vector.py  color_vector_extraction.py  embedding.py  generator.py  image_similarity.py  main.py  metadata_reader.py  similarity.py  timeit.py  yolo.py
test/: test_embedding.py  test_main.py  test_similarity.py  test_yolo.py
